feat: implement info endpoint with minor api changes
